--- a/PharmaceuticalsCompany/Views/Career/authentication.cshtml
+++ b/PharmaceuticalsCompany/Views/Career/authentication.cshtml
@@ -90,6 +90,11 @@
                                 </div>
                                 <div class="form-group">
                                     <i class="fas fa-key"></i>
+                                    <label>Phone:</label>
+                                    <input type="text" class="form-control" name="Phone">
+                                </div>
+                                <div class="form-group">
+                                    <i class="fas fa-key"></i>
                                     <label>Date Of Birth:</label>
                                     <input type="date" style="width:97%" class="form-control" name="DateOfBirth">
                                 </div>
@@ -98,14 +103,25 @@
                                     <label>Gender:</label>
                                     <input type="text" class="form-control" name="ConfirmPassWord">
                                 </div>
-                              
+
+                                <div class="form-group">
+                                    <i class="fas fa-key"></i>
+                                    <label>Photo:</label>
+                                    <input type="file" class="form-control" name="fileUser">
+                                </div>
                             </div>
                             <div class="item form-inline" id="2" style="margin-bottom:20px">
 
                                 <div class="form-group">
                                     <label>
                                         <i style="margin-right:5px" class="fa fa-school"></i> Name:
-                                        <input type="text" class="form-control" name="NameSchool" />
+                                        <input type="text" class="form-control" name="Name_school" />
+                                    </label>
+                                </div>
+                                <div class="form-group">
+                                    <label>
+                                        <i style="margin-right:5px" class="fa fa-school"></i> Address:
+                                        <input type="text" class="form-control" name="Location" />
                                     </label>
                                 </div>
                                 <div class="form-group">
@@ -123,7 +139,7 @@
                                 </div>
 
                                 <i class="fas fa-trash-alt" style="margin-right:2px"></i><a>Delete </a>
-                                <br/>
+                                <br />
                                 <a onclick='newwin()' style="margin-left:20px;margin-top:20px"> + Add New School</a>
 
 
